--- a/products.html
+++ b/products.html
@@ -121,7 +121,7 @@
             <p>Pink</p>
         </div>
         <div class="option">
-            <img src="./product_img.jpg" width="30" alt="">
+            <img src="./images/product_img.jpg" width="30" alt="">
             <p>Blue</p> <!-- ✅ fixed closing tag -->
         </div>
         <div class="option">
