--- a/cart.html
+++ b/cart.html
@@ -176,7 +176,7 @@
     </div>
 </div>
 <footer class="footer-cart">
-    <img src="./amazon_logo.png" width="100" alt="">
+    <img src="./images/amazon_logo.png" width="100" alt="">
     <p>&copy;2025, Amazon.com, Inc. or its Affilitates</p>
 </footer>
 </body>
