--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
     <!DOCTYPE html>
     <html lang="en">
     <head>
+        <meta name="google-site-verification" content="AVSae7F9gcImXdu2PcKkw5d_PA8gLP7frRoZLxhxXFs" />
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Amazon Clone by Kavitha Sree</title>
